# Informatyka-Algorytmiczna

./: .gitignore  .gitmodules  BST.cpp  BST.h  BinarySearchTree.cpp  BinarySearchTree.h  BinomialHeap.cpp  BinomialHeap.h  CMakeLists.txt  DP_QS.cpp  DSelect.cpp  DSelect.h  D_RNG.cpp  FibonacciHeap.cpp  FibonacciHeap.h  Graph.cpp  Graph.h  HYB.cpp  IS.cpp  I_RNG.cpp  LCSPrint.cpp  MS.cpp  QS.cpp  RB_BST.cpp  RB_BST.h  RB_BSTree.cpp  RB_BSTree.h  README.md  RNG.cpp  RS.cpp  RandomSelect.cpp  RedBlackBSTree.c  RedBlackBSTree.h  Select.cpp  SplayTree.cpp  SplayTree.h  ex2.cpp  main.cpp  queue.c  queue.cpp  (+6 more)
AISD-main/lista4/: BinarySearchTree.c  BinarySearchTree.h  SplayTree.c  SplayTree.h  main.c
Z1/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
Zad1_2/: OneWayList.c
ch9-1.1/ch9-1.1/: Makefile  README.txt
ch9-1.1/ch9-1.1/gens/: Makefile
ch9-1.1/ch9-1.1/inputs/: README.txt
ch9-1.1/ch9-1.1/lib/: permute.c  random.c
ch9-1.1/ch9-1.1/results/: README.txt
ch9-1.1/ch9-1.1/scripts/: Makefile  README.txt  cutUSA-road.pl  genLong-C.loc.p2p.pl  genLong-C.rnd.p2p.pl  genLong-n.loc.p2p.pl  genLong-n.rnd.p2p.pl  genRandom4-C.loc.p2p.pl  genRandom4-C.rnd.p2p.pl  genRandom4-n.loc.p2p.pl  genRandom4-n.rnd.p2p.pl  genSquare-C.loc.p2p.pl  genSquare-C.rnd.p2p.pl  genSquare-n.loc.p2p.pl  genSquare-n.rnd.p2p.pl  genUSA-road-d.gr.pl  genUSA-road-d.loc.p2p.pl  genUSA-road-d.rnd.p2p.pl  genUSA-road-t.gr.pl  genUSA-road-t.loc.p2p.pl  genUSA-road-t.rnd.p2p.pl  runLong-C.loc.p2p.pl  runLong-C.rnd.p2p.pl  runLong-C.ss.pl  runLong-n.loc.p2p.pl  runLong-n.rnd.p2p.pl  runLong-n.ss.pl  runRandom4-C.loc.p2p.pl  runRandom4-C.rnd.p2p.pl  runRandom4-C.ss.pl  runRandom4-n.loc.p2p.pl  runRandom4-n.rnd.p2p.pl  runRandom4-n.ss.pl  runSquare-C.loc.p2p.pl  runSquare-C.rnd.p2p.pl  runSquare-C.ss.pl  runSquare-n.loc.p2p.pl  runSquare-n.rnd.p2p.pl  runSquare-n.ss.pl  runUSA-road-d.loc.p2p.pl  (+5 more)
ch9-1.1/ch9-1.1/solvers/: Makefile
ch9-1.1/ch9-1.1/utils/: Makefile  README.txt  tiger2edimacs.pl
electives/AM/L2/: README.md  report2.tex
electives/AM/L3/: report.aux  report.dvi  report.out  report.tex
electives/BK/: README.md  sec-lab1.pdf.gpg  sec-lab2.pdf.gpg  sec-lab3.pdf.gpg
electives/BK/L4/: README.md  sec-lab4.pdf.gpg
electives/BK/L5/: README.md  main.py  sec-lab5.pdf.gpg
electives/BK/L6/: MYCSR.csr  README.md  key.pem  public.pem  public.pemclear  pwr-edu-pl-chain.pem  pwr-edu-pl.pem
electives/JPP/: README.md
electives/JPP/L1/: CMakeLists.txt  README.md  test_1.cpp
electives/JPP/L1/libs/: CMakeLists.txt  ada_lib_test.gpr  lib.adb  lib.ads  lib.c  lib.h  main.adb  test.adb  test_lib.ads
electives/JPP/L1/libs/ADA/: Ada_Lib_Prj.gpr  CMakeLists.txt  Prj.gpr  Test_Ada_Lib_Prj.gpr  ada_lib.ads  ada_lib_test.gpr  test_lib.adb
electives/JPP/L1/libs/ADA/lib/: ada_lib.ali
electives/JPP/L1/libs/ADA/src/: ada_lib.adb  ada_lib.ads
electives/JPP/L1/libs/ADA/test/: test_lib.adb
electives/JPP/L1/libs/C/: CMakeLists.txt
electives/JPP/L1/libs/C/src/: CMakeLists.txt  lib.c  lib.h
electives/JPP/L1/libs/C/test/: CMakeLists.txt  test_1.cpp
electives/JPP/L1/libs/GO/: CMakeLists.txt  go.mod  lib.go  lib_c.go  lib_test.go
electives/JPP/L1/libs/go_lib/: lib.go  lib_test.go
electives/JPP/L1/wrappers/: CMakeLists.txt
electives/JPP/L1/wrappers/4_C_FOR_ADA/: CMakeLists.txt
electives/JPP/L1/wrappers/5_ADA_FOR_C/src/: test.adb  test_lib.adb
electives/JPP/L1/wrappers/6_GO_FOR_C/: CMakeLists.txt  wrapper.go
electives/JPP/L1/wrappers/7_C_FOR_GO/: CMakeLists.txt  lib.h  test  test.c  test.cpp  wrapper.c  wrapper.h
electives/JPP/L1/wrappers/ADA/: CMakeLists.txt  Test_C_Wrp_Prj.gpr
electives/JPP/L1/wrappers/ADA/src/: test_lib.adb  test_lib.ads
electives/JPP/L1/wrappers/C/: CMakeLists.txt  C_Main.gpr  Test_Ada_Wrapper_Prj.gpr  test  test.c  wrapper.c  wrapper.h
electives/JPP/L1/wrappers/GO/: go.mod  wrapper.go  wrapper_test.go
electives/JPP/L2/: CMakeLists.txt  GF.cpp  GF.hpp  README.md  test_GF.cpp
electives/JPP/L2/cpp/: CMakeLists.txt
electives/JPP/L2/cpp/src/: CMakeLists.txt  GF.cpp  GF.hpp
electives/JPP/L2/cpp/test/: CMakeLists.txt  test_GF.cpp
electives/JPP/L2/java/: CMakeLists.txt  pom.xml
electives/JPP/L2/java/src/main/java/org/example/: CMakeLists.txt  GF.java  Lib.java
electives/JPP/L2/java/src/test/java/org/example/: GFTest.java
electives/JPP/L2/libs/: CMakeLists.txt  lib.c
electives/JPP/L2/python/: CMakeLists.txt  GF.py  test_GF.py
electives/JPP/L3/: CMakeLists.txt  README.md
electives/JPP/L3/cpp/: CMakeLists.txt
electives/JPP/L3/cpp/lib/: GF.cpp  lib.h
electives/JPP/L3/cpp/libs/: CMakeLists.txt  GF.hpp  lib.c
electives/JPP/L3/cpp/src/: CMakeLists.txt  DHSetup.hpp  User.hpp
electives/JPP/L3/cpp/test/: CMakeLists.txt  test_DHSetup.cpp  test_User.cpp
electives/JPP/L3/java/: CMakeLists.txt  pom.xml
electives/JPP/L3/java/src/main/java/org/example/: DHSetup.java  GF.java  GFI.java  Lib.java  User.java
electives/JPP/L3/java/src/test/java/: test_DHSetup.java
electives/JPP/L3/java/src/test/java/org/example/: DHSetupTest.java  UserTest.java
electives/JPP/L3/python/: CMakeLists.txt  DHSetup.py  GF.py  User.py  test_DHSetup.py  test_User.py
electives/JPP/L4/: README.md
electives/JPP/L5/: Makefile  README.md  ex1.hs  ex1.lisp  ex1.sml  ex2.pl
electives/PW/: README.md
electives/PW/L2/: concurrency.go
electives/PWL/: README.md
electives/PWL/L1/: README.md  ex2.pl
electives/PWL/L2/: README.md  ex2.pl
electives/PWL/L3/: README.md  ex1.pl  ex2.pl  ex3.pl
electives/PWL/L4/: README.md  ex1.pl  ex2.pl
electives/PWL/L5/: README.md  ex2.pl  ex3.pl
electives/PWL/L6/: interpreter.pl  lexer.pl  zad1.pl  zad2.pl  zad3.pl
electives/PWL/L7/: zad1.pl  zad2.pl  zad3.pl
electives/WZA/: README.md  ex03.pl  ex06.pl  ex09.py  ex10.py  ex11.py  ex12.py
ex1/: graph.py
ex2/: main.cpp
sem3/AKISO/: README.md
sem3/TP/: README.md
sem4/TS/: README.md
sem5/JFTT/: README.md
sem5/ON/: README.md
sem5/PW/: README.md
sem6/Embedded/: README.md
sem6/JP/L0/src/: c  (+9 more)
sem6/JPP/L1/: CMakeLists.txt  README.md
sem6/JPP/L1/src/: lib.c  lib.h  test_factorial.cpp
(+445 files in other folders)
